--- a/AspNetPim/packages.config
+++ b/AspNetPim/packages.config
@@ -2,17 +2,19 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="AspNet.Identity.LiteDB" version="1.0.0" targetFramework="net461" />
-  <package id="Autofac" version="4.6.2" targetFramework="net461" />
+  <package id="Autofac" version="4.8.1" targetFramework="net461" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net461" />
+  <package id="Autofac.Mvc5.Owin" version="4.0.1" targetFramework="net461" />
+  <package id="Autofac.Owin" version="4.2.0" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="jQuery" version="3.1.1" targetFramework="net461" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
-  <package id="LiteDB" version="3.1.4" targetFramework="net461" />
+  <package id="LiteDB" version="3.1.5" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
@@ -20,10 +22,10 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.2.0" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.1" targetFramework="net461" />
