--- a/Utils/packages.config
+++ b/Utils/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="AspNet.Identity.LiteDB" version="1.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
-  <package id="LiteDB" version="3.1.4" targetFramework="net461" />
+  <package id="LiteDB" version="3.1.5" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
   <package id="Mono.Options" version="5.3.0.1" targetFramework="net461" />
 </packages>
