--- a/Utils/log4net.config
+++ b/Utils/log4net.config
@@ -6,7 +6,7 @@
     <param name="PreserveLogFileNameExtension" value="true" />
     <DatePattern value="-yyyy-MM-MMM-dd" />
     <RollingStyle value="Date" />
-    <MaxDateRollBackups value="10" />
+    <MaxSizeRollBackups value="30" />
     <MaximumFileSize value="100MB" />
     <StaticLogFileName value="false" />
     <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
