--- a/PimTest/PimTest.csproj
+++ b/PimTest/PimTest.csproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Common.Logging" Version="2.3.1" />
     <PackageReference Include="LiteDB" Version="5.0.17" />
-    <PackageReference Include="Lucene.Net" Version="3.0.3" />
+    <PackageReference Include="Lucene.Net" Version="4.8.0-beta00016" />
     <PackageReference Include="Lucene.Net.Contrib" Version="3.0.3" />
     <PackageReference Include="Lucene.Net.Linq" Version="3.6.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
