website startup working

--- a/PimWeb/appsettings.Development.json
+++ b/PimWeb/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AppOptions": {
+    "FulltextIndexLanguages": ["English", "Russian"],
+    "DataPath": "c:/dev/bfs/PimDevData"
   }
 }
