--- a/FulltextStorageLib/FulltextStorageLib.csproj
+++ b/FulltextStorageLib/FulltextStorageLib.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="LiteDB" Version="5.0.17" />
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Lucene.Net" Version="4.8.0-beta00016" />
-    <PackageReference Include="Lucene.Net.Contrib" Version="3.0.3" />
+    <PackageReference Include="Lucene.Net.QueryParser" Version="4.8.0-beta00016" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="NFluent" Version="3.0.1.352" />
     <PackageReference Include="SharpZipLib" Version="1.4.2" />
