--- a/PimWeb/PimWeb.csproj
+++ b/PimWeb/PimWeb.csproj
@@ -24,4 +24,56 @@
   </ItemGroup>
 
 
+  <ItemGroup>
+    <AdditionalFiles Include="Views\Account\ChangePassword.cshtml" />
+    <AdditionalFiles Include="Views\Account\ConfirmEmail.cshtml" />
+    <AdditionalFiles Include="Views\Account\Delete.cshtml" />
+    <AdditionalFiles Include="Views\Account\Edit.cshtml" />
+    <AdditionalFiles Include="Views\Account\ForgotPassword.cshtml" />
+    <AdditionalFiles Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
+    <AdditionalFiles Include="Views\Account\Login.cshtml" />
+    <AdditionalFiles Include="Views\Account\Manage.cshtml" />
+    <AdditionalFiles Include="Views\Account\Register.cshtml" />
+    <AdditionalFiles Include="Views\Account\ResetPassword.cshtml" />
+    <AdditionalFiles Include="Views\Account\ResetPasswordConfirmation.cshtml" />
+    <AdditionalFiles Include="Views\Account\UserRoles.cshtml" />
+    <AdditionalFiles Include="Views\Account\_ChangePasswordPartial.cshtml" />
+    <AdditionalFiles Include="Views\Account\_SetPasswordPartial.cshtml" />
+    <AdditionalFiles Include="Views\Home\About.cshtml" />
+    <AdditionalFiles Include="Views\Home\Index.cshtml" />
+    <AdditionalFiles Include="Views\Home\IndexPartial.cshtml" />
+    <AdditionalFiles Include="Views\Search\Search.cshtml" />
+    <AdditionalFiles Include="Views\Search\SearchPartial.cshtml" />
+    <AdditionalFiles Include="Views\Shared\NoteList.cshtml" />
+    <AdditionalFiles Include="Views\Shared\_Layout.cshtml" />
+    <AdditionalFiles Include="Views\Shared\_ValidationScriptsPartial.cshtml" />
+    <AdditionalFiles Include="Views\ViewEdit\ViewEdit.cshtml" />
+    <AdditionalFiles Include="Views\ViewEdit\ViewEditPartial.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\Account\ChangePassword.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Account\ConfirmEmail.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Account\Delete.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Account\Edit.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Account\ForgotPassword.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Account\ForgotPasswordConfirmation.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Account\Login.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Account\Manage.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Account\Register.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Account\ResetPassword.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Account\ResetPasswordConfirmation.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Account\UserRoles.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Account\_ChangePasswordPartial.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Account\_SetPasswordPartial.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\ViewEdit\ViewEdit.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\ViewEdit\ViewEditPartial.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Shared\NoteList.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Shared\_Layout.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Shared\_LoginPartial.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Shared\_ValidationScriptsPartial.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Search\Search.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Search\SearchPartial.cshtml" />
+  </ItemGroup>
+
 </Project>
