--- a/PimWeb/appsettings.Development.json
+++ b/PimWeb/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+  "RavenSettings": {
+    "Urls": [
+      "http://127.0.0.1:8080"
+    ],
+    "DatabaseName": "identity",
+    "CertFilePath": "",
+    "CertPassword": ""
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
@@ -9,5 +17,15 @@
   "AppOptions": {
     "FulltextIndexLanguages": ["English", "Russian"],
     "DataPath": "c:/dev/bfs/PimDevData"
+  },
+  "SeedUsers": {
+    "users": [
+      {
+        "name": "admin",
+        "email": "admin@pim.com",
+        "password": "password",
+        "roles": ["Admin"]
+      }
+    ]
   }
 }
