--- a/PimWeb/appsettings.Development.json
+++ b/PimWeb/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=pim;User Id=postgres;Password=9jhgMa3JJ"
+  },
   "RavenSettings": {
     "Urls": [
       "http://127.0.0.1:8080"
