identity seed working

--- a/PimWeb/appsettings.Development.json
+++ b/PimWeb/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=pim;User Id=postgres;Password=9jhgMa3JJ"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=pim;User Id=pimweb;Password=9jhgMa3JJ"
   },
   "RavenSettings": {
     "Urls": [
