--- a/PimWeb/appsettings.json
+++ b/PimWeb/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "AppOptions": {
-    "FulltextIndexLanguages": ["English", "Russian"],
+    "FulltextIndexLanguages": ["public.mysearch"],
     "DataPath": ""
   }
 }
