--- a/PimWeb/appsettings.json
+++ b/PimWeb/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "AppOptions": {
-    "FulltextIndexLanguages": ["public.mysearch"],
+    "FulltextConfig": "public.mysearch",
     "DataPath": ""
   }
 }
