enable running under virtual base path

--- a/PimWeb/appsettings.Development.json
+++ b/PimWeb/appsettings.Development.json
@@ -9,6 +9,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5002"
+      }
+    }
+  },
   "SeedUsers": {
     "users": [
       {
