--- a/PimWeb/Properties/launchSettings.json
+++ b/PimWeb/Properties/launchSettings.json
@@ -12,9 +12,10 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7173;http://localhost:5173",
+      "applicationUrl": "http://localhost:5002/pim",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "APP_VIRTUAL_PATH": "pim"
       }
     },
     "IIS Express": {
