take text file extensions from config

--- a/PimWeb/appsettings.json
+++ b/PimWeb/appsettings.json
@@ -9,7 +9,8 @@
   "AppOptions": {
     "FulltextConfig": "public.mysearch",
     "WebAppPath": "Pim",
-    "FileStoragePath": "f:/data/pim"
+    "FileStoragePath": "f:/data/pim",
+    "TextFileExtensions": ["txt", "log", "md", "xml", "sql", "cs", "htm", "html", "text", "py"]
   },
   "SeedUsers": {
     "users": [
